// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`printing ballots, print report, and test decks 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="sc-bdfBwQ eVNwUy"
  >
    <div
      class="sc-hKgILt ciSCwP"
    >
      <div
        class="sc-eCssSg evawvT"
      >
        <div
          class="sc-jSgupP ioUXLm"
        >
          Voting
          <span>
            Works
          </span>
        </div>
        <div
          class="sc-gKsewC"
        >
          Election Manager
        </div>
      </div>
      <div
        class="sc-iBPRYJ fVzTCx"
      >
        <button
          class="sc-jrAGrp hAHAue"
          role="option"
          type="button"
        >
          Definition
        </button>
        <button
          class="sc-jrAGrp hAHAue"
          role="option"
          type="button"
        >
          Ballots
        </button>
        <button
          class="sc-jrAGrp iWxjsY active-section"
          role="option"
          type="button"
        >
          Tally
        </button>
      </div>
      <div
        class="sc-fubCfw kBiVZq"
      >
        <button
          class="sc-jrAGrp iWxjsY"
          type="button"
        >
          Eject USB
        </button>
      </div>
    </div>
    <main
      class="sc-gsTCUz hqEESM"
    >
      <div
        class="sc-dlfnbm kzZCED"
      >
        <div
          class="sc-hBEYos bBKpcB"
        >
          <h1>
            Test Deck
          </h1>
          <p>
            <strong>
              Election:
            </strong>
             
            Mock General Election Choctaw 2020
            <br />
            <strong>
              Precinct:
            </strong>
             
            District 5
          </p>
          <p>
            <button
              class="sc-jrAGrp cvGifY"
              type="button"
            >
              Print Test Deck
            </button>
          </p>
          <p>
            <button
              class="sc-jrAGrp iWxjsY"
              role="option"
              type="button"
            >
              Back to Test Deck list
            </button>
          </p>
        </div>
      </div>
    </main>
    <div
      class="sc-kstrdz hFgVdI"
    >
      <div
        class="sc-crrsfI KbGmM"
      >
        <strong>
          Mock General Election Choctaw 2020
        </strong>
         — 
        Wednesday, August 26, 2020
         —
         
        Choctaw County
        , 
        State of Mississippi
         
      </div>
      <div
        class="sc-crrsfI KbGmM"
      >
        Election Hash: 
        <strong>
          6bdcd6d885
        </strong>
      </div>
    </div>
  </div>
  <div
    class="print-only"
  >
    <div>
      <h1>
        Mocked HMPB
      </h1>
      Election: 
      Mock General Election Choctaw 2020
      <br />
      Ballot Style 
      5
      , precinct 
      6522
      .
    </div>
    <div>
      <h1>
        Mocked HMPB
      </h1>
      Election: 
      Mock General Election Choctaw 2020
      <br />
      Ballot Style 
      5
      , precinct 
      6522
      .
    </div>
    <div>
      <h1>
        Mocked HMPB
      </h1>
      Election: 
      Mock General Election Choctaw 2020
      <br />
      Ballot Style 
      5
      , precinct 
      6522
      .
    </div>
  </div>
  <div />
</div>
`;

exports[`printing ballots, print report, and test decks 2`] = `
<div>
  <div
    class="sc-bdfBwQ eVNwUy"
  >
    <div
      class="sc-hKgILt ciSCwP"
    >
      <div
        class="sc-eCssSg evawvT"
      >
        <div
          class="sc-jSgupP ioUXLm"
        >
          Voting
          <span>
            Works
          </span>
        </div>
        <div
          class="sc-gKsewC"
        >
          Election Manager
        </div>
      </div>
      <div
        class="sc-iBPRYJ fVzTCx"
      >
        <button
          class="sc-jrAGrp hAHAue"
          role="option"
          type="button"
        >
          Definition
        </button>
        <button
          class="sc-jrAGrp hAHAue"
          role="option"
          type="button"
        >
          Ballots
        </button>
        <button
          class="sc-jrAGrp iWxjsY active-section"
          role="option"
          type="button"
        >
          Tally
        </button>
      </div>
      <div
        class="sc-fubCfw kBiVZq"
      >
        <button
          class="sc-jrAGrp iWxjsY"
          type="button"
        >
          Eject USB
        </button>
      </div>
    </div>
    <main
      class="sc-gsTCUz hqEESM"
    >
      <div
        class="sc-dlfnbm kzZCED"
      >
        <div
          class="sc-hBEYos bBKpcB"
        >
          <h1>
            Test Ballot Deck Tally
          </h1>
          <p>
            <strong>
              Election:
            </strong>
             
            Mock General Election Choctaw 2020
            <br />
            <strong>
              Precinct:
            </strong>
             
            All Precincts
          </p>
          <p>
            <button
              class="sc-jrAGrp cvGifY"
              type="button"
            >
              Print Results Report
            </button>
          </p>
          <p>
            <button
              class="sc-jrAGrp hAHAue"
              type="button"
            >
              Save Results Report as PDF
            </button>
          </p>
          <p>
            <button
              class="sc-jrAGrp iWxjsY"
              role="option"
              type="button"
            >
              Back to Test Deck list
            </button>
          </p>
        </div>
      </div>
    </main>
    <div
      class="sc-kstrdz hFgVdI"
    >
      <div
        class="sc-crrsfI KbGmM"
      >
        <strong>
          Mock General Election Choctaw 2020
        </strong>
         — 
        Wednesday, August 26, 2020
         —
         
        Choctaw County
        , 
        State of Mississippi
         
      </div>
      <div
        class="sc-crrsfI KbGmM"
      >
        Election Hash: 
        <strong>
          6bdcd6d885
        </strong>
      </div>
    </div>
  </div>
  <div
    class="print-only"
  >
    <div
      class="sc-hiSbYr chYtqq"
    >
      <h1>
        Test Ballot Deck Tally
      </h1>
      <p>
        <strong>
          Election:
        </strong>
         
         Mock General Election Choctaw 2020
        <br />
        <strong>
          Precinct:
        </strong>
         
        All Precincts
      </p>
      <div
        class="sc-jJEJSO cJfRAW"
      >
        <div
          class="sc-hBEYos lvLIa"
        >
          <div
            class="sc-iktFzd dkHGVf ignore-prose"
          >
            <span
              class="sc-crrsfI XvqqD"
            >
              39 ballots
               cast /
               
              0 overvotes
               /
               
              0 undervotes
            </span>
          </div>
          <h3>
            United States
            , 
            President
          </h3>
          <table
            class="sc-fFubgz hqxDEn"
          >
            <tbody>
              <tr>
                <td>
                  Presidential Electors for Joe Biden for President and Kamala Harris for Vice President
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  13
                </td>
              </tr>
              <tr>
                <td>
                  Presidential Electors for Donald J. Trump for President and Michael R. Pence for Vice President
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  13
                </td>
              </tr>
              <tr>
                <td>
                  Presidential Electors for Phil Collins for President and Bill Parker for Vice President
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  13
                </td>
              </tr>
              <tr>
                <td>
                  Write-In
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  0
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="sc-jJEJSO cJfRAW"
      >
        <div
          class="sc-hBEYos lvLIa"
        >
          <div
            class="sc-iktFzd dkHGVf ignore-prose"
          >
            <span
              class="sc-crrsfI XvqqD"
            >
              39 ballots
               cast /
               
              0 overvotes
               /
               
              0 undervotes
            </span>
          </div>
          <h3>
            United States
            , 
            Senate 
          </h3>
          <table
            class="sc-fFubgz hqxDEn"
          >
            <tbody>
              <tr>
                <td>
                  Mike Espy
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  13
                </td>
              </tr>
              <tr>
                <td>
                  Cindy Hyde-Smith
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  13
                </td>
              </tr>
              <tr>
                <td>
                  Jimmy Edwards
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  13
                </td>
              </tr>
              <tr>
                <td>
                  Write-In
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  0
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="sc-jJEJSO cJfRAW"
      >
        <div
          class="sc-hBEYos lvLIa"
        >
          <div
            class="sc-iktFzd dkHGVf ignore-prose"
          >
            <span
              class="sc-crrsfI XvqqD"
            >
              39 ballots
               cast /
               
              0 overvotes
               /
               
              0 undervotes
            </span>
          </div>
          <h3>
            US House Of Representatives
            , 
            1st Congressional District
          </h3>
          <table
            class="sc-fFubgz hqxDEn"
          >
            <tbody>
              <tr>
                <td>
                  Antonia Eliason
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  26
                </td>
              </tr>
              <tr>
                <td>
                  Trent Kelly
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  13
                </td>
              </tr>
              <tr>
                <td>
                  Write-In
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  0
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="sc-jJEJSO cJfRAW"
      >
        <div
          class="sc-hBEYos lvLIa"
        >
          <div
            class="sc-iktFzd dkHGVf ignore-prose"
          >
            <span
              class="sc-crrsfI XvqqD"
            >
              39 ballots
               cast /
               
              0 overvotes
               /
               
              0 undervotes
            </span>
          </div>
          <h3>
            Northern District
            , 
            Supreme Court District 3(Northern) Position 3
          </h3>
          <table
            class="sc-fFubgz hqxDEn"
          >
            <tbody>
              <tr>
                <td>
                  Josiah Dennis Coleman
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  26
                </td>
              </tr>
              <tr>
                <td>
                  Percy L. Lynchard
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  13
                </td>
              </tr>
              <tr>
                <td>
                  Write-In
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  0
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="sc-jJEJSO cJfRAW"
      >
        <div
          class="sc-hBEYos lvLIa"
        >
          <div
            class="sc-iktFzd dkHGVf ignore-prose"
          >
            <span
              class="sc-crrsfI XvqqD"
            >
              9 ballots
               cast /
               
              0 overvotes
               /
               
              0 undervotes
            </span>
          </div>
          <h3>
            Election Commissioner 01
            , 
            Election Commissioner  01
          </h3>
          <table
            class="sc-fFubgz hqxDEn"
          >
            <tbody>
              <tr>
                <td>
                  Glynda Chaney Fulce
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  9
                </td>
              </tr>
              <tr>
                <td>
                  Write-In
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  0
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="sc-jJEJSO cJfRAW"
      >
        <div
          class="sc-hBEYos lvLIa"
        >
          <div
            class="sc-iktFzd dkHGVf ignore-prose"
          >
            <span
              class="sc-crrsfI XvqqD"
            >
              9 ballots
               cast /
               
              0 overvotes
               /
               
              0 undervotes
            </span>
          </div>
          <h3>
            Election Commissioner 02
            , 
            Election Commissioner 02
          </h3>
          <table
            class="sc-fFubgz hqxDEn"
          >
            <tbody>
              <tr>
                <td>
                  Charles Beck
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  6
                </td>
              </tr>
              <tr>
                <td>
                  Sharon Brooks
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  3
                </td>
              </tr>
              <tr>
                <td>
                  Write-In
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  0
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="sc-jJEJSO cJfRAW"
      >
        <div
          class="sc-hBEYos lvLIa"
        >
          <div
            class="sc-iktFzd dkHGVf ignore-prose"
          >
            <span
              class="sc-crrsfI XvqqD"
            >
              9 ballots
               cast /
               
              0 overvotes
               /
               
              0 undervotes
            </span>
          </div>
          <h3>
            Election Commissioner 03
            , 
            Election Commissioner 03
          </h3>
          <table
            class="sc-fFubgz hqxDEn"
          >
            <tbody>
              <tr>
                <td>
                  Dorothy Anderson
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  9
                </td>
              </tr>
              <tr>
                <td>
                  Write-In
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  0
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="sc-jJEJSO cJfRAW"
      >
        <div
          class="sc-hBEYos lvLIa"
        >
          <div
            class="sc-iktFzd dkHGVf ignore-prose"
          >
            <span
              class="sc-crrsfI XvqqD"
            >
              9 ballots
               cast /
               
              0 overvotes
               /
               
              0 undervotes
            </span>
          </div>
          <h3>
            Election Commissioner 04
            , 
            Election Commissioner 04
          </h3>
          <table
            class="sc-fFubgz hqxDEn"
          >
            <tbody>
              <tr>
                <td>
                  Willie Mae Guillory
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  6
                </td>
              </tr>
              <tr>
                <td>
                  Lewis Wright
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  3
                </td>
              </tr>
              <tr>
                <td>
                  Write-In
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  0
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="sc-jJEJSO cJfRAW"
      >
        <div
          class="sc-hBEYos lvLIa"
        >
          <div
            class="sc-iktFzd dkHGVf ignore-prose"
          >
            <span
              class="sc-crrsfI XvqqD"
            >
              3 ballots
               cast /
               
              0 overvotes
               /
               
              0 undervotes
            </span>
          </div>
          <h3>
            Election Commissioner 05
            , 
            Election Commissioner 05
          </h3>
          <table
            class="sc-fFubgz hqxDEn"
          >
            <tbody>
              <tr>
                <td>
                  Ouida A Loper
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  2
                </td>
              </tr>
              <tr>
                <td>
                  Wayne McLeod
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  1
                </td>
              </tr>
              <tr>
                <td>
                  Write-In
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  0
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="sc-jJEJSO cJfRAW"
      >
        <div
          class="sc-hBEYos lvLIa"
        >
          <div
            class="sc-iktFzd dkHGVf ignore-prose"
          >
            <span
              class="sc-crrsfI XvqqD"
            >
              3 ballots
               cast /
               
              0 overvotes
               /
               
              0 undervotes
            </span>
          </div>
          <h3>
            School Board District 5
            , 
            School Board 05
          </h3>
          <table
            class="sc-fFubgz hqxDEn"
          >
            <tbody>
              <tr>
                <td>
                  Michael D Thomas
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  3
                </td>
              </tr>
              <tr>
                <td>
                  Write-In
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  0
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="sc-jJEJSO cJfRAW"
      >
        <div
          class="sc-hBEYos lvLIa"
        >
          <div
            class="sc-iktFzd dkHGVf ignore-prose"
          >
            <span
              class="sc-crrsfI XvqqD"
            >
              39 ballots
               cast /
               
              0 overvotes
               /
               
              0 undervotes
            </span>
          </div>
          <h3>
            State Of Mississippi
            , 
            Ballot Measure 2
House Concurrent Resolution No. 47
          </h3>
          <table
            class="sc-fFubgz hqxDEn"
          >
            <tbody>
              <tr>
                <td>
                  YES
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  26
                </td>
              </tr>
              <tr>
                <td>
                  NO
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  13
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="sc-jJEJSO cJfRAW"
      >
        <div
          class="sc-hBEYos lvLIa"
        >
          <div
            class="sc-iktFzd dkHGVf ignore-prose"
          >
            <span
              class="sc-crrsfI XvqqD"
            >
              39 ballots
               cast /
               
              0 overvotes
               /
               
              0 undervotes
            </span>
          </div>
          <h3>
            State Of Mississippi
            , 
            Ballot Measure 3
House Bill 1796 - Flag Referendum
          </h3>
          <table
            class="sc-fFubgz hqxDEn"
          >
            <tbody>
              <tr>
                <td>
                  YES
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  26
                </td>
              </tr>
              <tr>
                <td>
                  NO
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  13
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="sc-jJEJSO cJfRAW"
      >
        <div
          class="sc-hBEYos lvLIa"
        >
          <div
            class="sc-iktFzd dkHGVf ignore-prose"
          >
            <span
              class="sc-crrsfI XvqqD"
            >
              39 ballots
               cast /
               
              0 overvotes
               /
               
              0 undervotes
            </span>
          </div>
          <h3>
            State Of Mississippi
            , 
            Ballot Measure 1 – Either/Neither
          </h3>
          <table
            class="sc-fFubgz hqxDEn"
          >
            <tbody>
              <tr>
                <td>
                  FOR APPROVAL OF EITHER Initiative No. 65 OR Alternative Measure No. 65 A
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  26
                </td>
              </tr>
              <tr>
                <td>
                  AGAINST BOTH Initiative Measure No. 65 AND Alternative Measure No. 65 A
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  13
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="sc-jJEJSO cJfRAW"
      >
        <div
          class="sc-hBEYos lvLIa"
        >
          <div
            class="sc-iktFzd dkHGVf ignore-prose"
          >
            <span
              class="sc-crrsfI XvqqD"
            >
              39 ballots
               cast /
               
              0 overvotes
               /
               
              0 undervotes
            </span>
          </div>
          <h3>
            State Of Mississippi
            , 
            Ballot Measure 1 – Pick One
          </h3>
          <table
            class="sc-fFubgz hqxDEn"
          >
            <tbody>
              <tr>
                <td>
                  FOR Initiative Measure No. 65
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  26
                </td>
              </tr>
              <tr>
                <td>
                  FOR Alternative Measure 65 A
                </td>
                <td
                  class="sc-bkzZxe hhbIzz"
                >
                  13
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
  <div />
</div>
`;

exports[`tabulating CVRs 1`] = `
<div
  data-testid="tally-report-contents"
>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          100 ballots
           cast /
           
          1 overvote
           /
           
          7 undervotes
        </span>
      </div>
      <h3>
        United States
        , 
        President
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              Presidential Electors for Joe Biden for President and Kamala Harris for Vice President
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              27
            </td>
          </tr>
          <tr>
            <td>
              Presidential Electors for Donald J. Trump for President and Michael R. Pence for Vice President
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              36
            </td>
          </tr>
          <tr>
            <td>
              Presidential Electors for Phil Collins for President and Bill Parker for Vice President
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              29
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          100 ballots
           cast /
           
          4 overvotes
           /
           
          4 undervotes
        </span>
      </div>
      <h3>
        United States
        , 
        Senate 
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              Mike Espy
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              29
            </td>
          </tr>
          <tr>
            <td>
              Cindy Hyde-Smith
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              35
            </td>
          </tr>
          <tr>
            <td>
              Jimmy Edwards
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              28
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          100 ballots
           cast /
           
          3 overvotes
           /
           
          5 undervotes
        </span>
      </div>
      <h3>
        US House Of Representatives
        , 
        1st Congressional District
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              Antonia Eliason
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              46
            </td>
          </tr>
          <tr>
            <td>
              Trent Kelly
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              46
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          100 ballots
           cast /
           
          0 overvotes
           /
           
          5 undervotes
        </span>
      </div>
      <h3>
        Northern District
        , 
        Supreme Court District 3(Northern) Position 3
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              Josiah Dennis Coleman
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              37
            </td>
          </tr>
          <tr>
            <td>
              Percy L. Lynchard
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              58
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          18 ballots
           cast /
           
          0 overvotes
           /
           
          1 undervote
        </span>
      </div>
      <h3>
        Election Commissioner 01
        , 
        Election Commissioner  01
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              Glynda Chaney Fulce
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              17
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          15 ballots
           cast /
           
          0 overvotes
           /
           
          1 undervote
        </span>
      </div>
      <h3>
        Election Commissioner 02
        , 
        Election Commissioner 02
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              Charles Beck
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              5
            </td>
          </tr>
          <tr>
            <td>
              Sharon Brooks
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              9
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          23 ballots
           cast /
           
          0 overvotes
           /
           
          1 undervote
        </span>
      </div>
      <h3>
        Election Commissioner 03
        , 
        Election Commissioner 03
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              Dorothy Anderson
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              22
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          25 ballots
           cast /
           
          1 overvote
           /
           
          0 undervotes
        </span>
      </div>
      <h3>
        Election Commissioner 04
        , 
        Election Commissioner 04
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              Willie Mae Guillory
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              10
            </td>
          </tr>
          <tr>
            <td>
              Lewis Wright
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              14
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          19 ballots
           cast /
           
          2 overvotes
           /
           
          2 undervotes
        </span>
      </div>
      <h3>
        Election Commissioner 05
        , 
        Election Commissioner 05
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              Ouida A Loper
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              9
            </td>
          </tr>
          <tr>
            <td>
              Wayne McLeod
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              6
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          19 ballots
           cast /
           
          0 overvotes
           /
           
          0 undervotes
        </span>
      </div>
      <h3>
        School Board District 5
        , 
        School Board 05
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              Michael D Thomas
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              19
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          100 ballots
           cast /
           
          2 overvotes
           /
           
          5 undervotes
        </span>
      </div>
      <h3>
        State Of Mississippi
        , 
        Ballot Measure 2
House Concurrent Resolution No. 47
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              YES
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              40
            </td>
          </tr>
          <tr>
            <td>
              NO
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              53
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          100 ballots
           cast /
           
          3 overvotes
           /
           
          2 undervotes
        </span>
      </div>
      <h3>
        State Of Mississippi
        , 
        Ballot Measure 3
House Bill 1796 - Flag Referendum
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              YES
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              43
            </td>
          </tr>
          <tr>
            <td>
              NO
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              52
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          98 ballots
           cast /
           
          3 overvotes
           /
           
          3 undervotes
        </span>
      </div>
      <h3>
        State Of Mississippi
        , 
        Ballot Measure 1 – Either/Neither
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              FOR APPROVAL OF EITHER Initiative No. 65 OR Alternative Measure No. 65 A
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              39
            </td>
          </tr>
          <tr>
            <td>
              AGAINST BOTH Initiative Measure No. 65 AND Alternative Measure No. 65 A
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              53
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          98 ballots
           cast /
           
          4 overvotes
           /
           
          5 undervotes
        </span>
      </div>
      <h3>
        State Of Mississippi
        , 
        Ballot Measure 1 – Pick One
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              FOR Initiative Measure No. 65
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              40
            </td>
          </tr>
          <tr>
            <td>
              FOR Alternative Measure 65 A
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              49
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`tabulating CVRs 2`] = `
<div
  data-testid="tally-report-contents"
>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          0 ballots
           cast /
           
          0 overvotes
           /
           
          0 undervotes
        </span>
      </div>
      <h3>
        United States
        , 
        President
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              Presidential Electors for Joe Biden for President and Kamala Harris for Vice President
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
          <tr>
            <td>
              Presidential Electors for Donald J. Trump for President and Michael R. Pence for Vice President
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
          <tr>
            <td>
              Presidential Electors for Phil Collins for President and Bill Parker for Vice President
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          0 ballots
           cast /
           
          0 overvotes
           /
           
          0 undervotes
        </span>
      </div>
      <h3>
        United States
        , 
        Senate 
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              Mike Espy
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
          <tr>
            <td>
              Cindy Hyde-Smith
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
          <tr>
            <td>
              Jimmy Edwards
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          0 ballots
           cast /
           
          0 overvotes
           /
           
          0 undervotes
        </span>
      </div>
      <h3>
        US House Of Representatives
        , 
        1st Congressional District
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              Antonia Eliason
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
          <tr>
            <td>
              Trent Kelly
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          0 ballots
           cast /
           
          0 overvotes
           /
           
          0 undervotes
        </span>
      </div>
      <h3>
        Northern District
        , 
        Supreme Court District 3(Northern) Position 3
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              Josiah Dennis Coleman
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
          <tr>
            <td>
              Percy L. Lynchard
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          0 ballots
           cast /
           
          0 overvotes
           /
           
          0 undervotes
        </span>
      </div>
      <h3>
        Election Commissioner 01
        , 
        Election Commissioner  01
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              Glynda Chaney Fulce
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          0 ballots
           cast /
           
          0 overvotes
           /
           
          0 undervotes
        </span>
      </div>
      <h3>
        Election Commissioner 02
        , 
        Election Commissioner 02
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              Charles Beck
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
          <tr>
            <td>
              Sharon Brooks
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          0 ballots
           cast /
           
          0 overvotes
           /
           
          0 undervotes
        </span>
      </div>
      <h3>
        Election Commissioner 03
        , 
        Election Commissioner 03
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              Dorothy Anderson
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          0 ballots
           cast /
           
          0 overvotes
           /
           
          0 undervotes
        </span>
      </div>
      <h3>
        Election Commissioner 04
        , 
        Election Commissioner 04
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              Willie Mae Guillory
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
          <tr>
            <td>
              Lewis Wright
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          0 ballots
           cast /
           
          0 overvotes
           /
           
          0 undervotes
        </span>
      </div>
      <h3>
        Election Commissioner 05
        , 
        Election Commissioner 05
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              Ouida A Loper
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
          <tr>
            <td>
              Wayne McLeod
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          0 ballots
           cast /
           
          0 overvotes
           /
           
          0 undervotes
        </span>
      </div>
      <h3>
        School Board District 5
        , 
        School Board 05
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              Michael D Thomas
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          0 ballots
           cast /
           
          0 overvotes
           /
           
          0 undervotes
        </span>
      </div>
      <h3>
        State Of Mississippi
        , 
        Ballot Measure 2
House Concurrent Resolution No. 47
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              YES
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
          <tr>
            <td>
              NO
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          0 ballots
           cast /
           
          0 overvotes
           /
           
          0 undervotes
        </span>
      </div>
      <h3>
        State Of Mississippi
        , 
        Ballot Measure 3
House Bill 1796 - Flag Referendum
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              YES
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
          <tr>
            <td>
              NO
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          0 ballots
           cast /
           
          0 overvotes
           /
           
          0 undervotes
        </span>
      </div>
      <h3>
        State Of Mississippi
        , 
        Ballot Measure 1 – Either/Neither
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              FOR APPROVAL OF EITHER Initiative No. 65 OR Alternative Measure No. 65 A
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
          <tr>
            <td>
              AGAINST BOTH Initiative Measure No. 65 AND Alternative Measure No. 65 A
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          0 ballots
           cast /
           
          0 overvotes
           /
           
          0 undervotes
        </span>
      </div>
      <h3>
        State Of Mississippi
        , 
        Ballot Measure 1 – Pick One
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              FOR Initiative Measure No. 65
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
          <tr>
            <td>
              FOR Alternative Measure 65 A
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`tabulating CVRs with SEMS file 1`] = `
<div
  data-testid="tally-report-contents"
>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          200 ballots
           cast /
           
          2 overvotes
           /
           
          14 undervotes
        </span>
      </div>
      <h3>
        United States
        , 
        President
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              Presidential Electors for Joe Biden for President and Kamala Harris for Vice President
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              54
            </td>
          </tr>
          <tr>
            <td>
              Presidential Electors for Donald J. Trump for President and Michael R. Pence for Vice President
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              72
            </td>
          </tr>
          <tr>
            <td>
              Presidential Electors for Phil Collins for President and Bill Parker for Vice President
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              58
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          200 ballots
           cast /
           
          8 overvotes
           /
           
          8 undervotes
        </span>
      </div>
      <h3>
        United States
        , 
        Senate 
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              Mike Espy
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              58
            </td>
          </tr>
          <tr>
            <td>
              Cindy Hyde-Smith
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              70
            </td>
          </tr>
          <tr>
            <td>
              Jimmy Edwards
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              56
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          200 ballots
           cast /
           
          6 overvotes
           /
           
          10 undervotes
        </span>
      </div>
      <h3>
        US House Of Representatives
        , 
        1st Congressional District
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              Antonia Eliason
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              92
            </td>
          </tr>
          <tr>
            <td>
              Trent Kelly
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              92
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          200 ballots
           cast /
           
          0 overvotes
           /
           
          10 undervotes
        </span>
      </div>
      <h3>
        Northern District
        , 
        Supreme Court District 3(Northern) Position 3
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              Josiah Dennis Coleman
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              74
            </td>
          </tr>
          <tr>
            <td>
              Percy L. Lynchard
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              116
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          36 ballots
           cast /
           
          0 overvotes
           /
           
          2 undervotes
        </span>
      </div>
      <h3>
        Election Commissioner 01
        , 
        Election Commissioner  01
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              Glynda Chaney Fulce
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              34
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          30 ballots
           cast /
           
          0 overvotes
           /
           
          2 undervotes
        </span>
      </div>
      <h3>
        Election Commissioner 02
        , 
        Election Commissioner 02
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              Charles Beck
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              10
            </td>
          </tr>
          <tr>
            <td>
              Sharon Brooks
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              18
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          46 ballots
           cast /
           
          0 overvotes
           /
           
          2 undervotes
        </span>
      </div>
      <h3>
        Election Commissioner 03
        , 
        Election Commissioner 03
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              Dorothy Anderson
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              44
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          50 ballots
           cast /
           
          2 overvotes
           /
           
          0 undervotes
        </span>
      </div>
      <h3>
        Election Commissioner 04
        , 
        Election Commissioner 04
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              Willie Mae Guillory
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              20
            </td>
          </tr>
          <tr>
            <td>
              Lewis Wright
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              28
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          38 ballots
           cast /
           
          4 overvotes
           /
           
          4 undervotes
        </span>
      </div>
      <h3>
        Election Commissioner 05
        , 
        Election Commissioner 05
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              Ouida A Loper
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              18
            </td>
          </tr>
          <tr>
            <td>
              Wayne McLeod
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              12
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          38 ballots
           cast /
           
          0 overvotes
           /
           
          0 undervotes
        </span>
      </div>
      <h3>
        School Board District 5
        , 
        School Board 05
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              Michael D Thomas
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              38
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          200 ballots
           cast /
           
          4 overvotes
           /
           
          10 undervotes
        </span>
      </div>
      <h3>
        State Of Mississippi
        , 
        Ballot Measure 2
House Concurrent Resolution No. 47
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              YES
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              80
            </td>
          </tr>
          <tr>
            <td>
              NO
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              106
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          200 ballots
           cast /
           
          6 overvotes
           /
           
          4 undervotes
        </span>
      </div>
      <h3>
        State Of Mississippi
        , 
        Ballot Measure 3
House Bill 1796 - Flag Referendum
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              YES
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              86
            </td>
          </tr>
          <tr>
            <td>
              NO
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              104
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          196 ballots
           cast /
           
          6 overvotes
           /
           
          6 undervotes
        </span>
      </div>
      <h3>
        State Of Mississippi
        , 
        Ballot Measure 1 – Either/Neither
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              FOR APPROVAL OF EITHER Initiative No. 65 OR Alternative Measure No. 65 A
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              78
            </td>
          </tr>
          <tr>
            <td>
              AGAINST BOTH Initiative Measure No. 65 AND Alternative Measure No. 65 A
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              106
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-jJEJSO cJfRAW"
  >
    <div
      class="sc-hBEYos lvLIa"
    >
      <div
        class="sc-iktFzd dkHGVf ignore-prose"
      >
        <span
          class="sc-crrsfI XvqqD"
        >
          196 ballots
           cast /
           
          8 overvotes
           /
           
          10 undervotes
        </span>
      </div>
      <h3>
        State Of Mississippi
        , 
        Ballot Measure 1 – Pick One
      </h3>
      <table
        class="sc-fFubgz hqxDEn"
      >
        <tbody>
          <tr>
            <td>
              FOR Initiative Measure No. 65
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              80
            </td>
          </tr>
          <tr>
            <td>
              FOR Alternative Measure 65 A
            </td>
            <td
              class="sc-bkzZxe hhbIzz"
            >
              98
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
